src/App.css
@import url('https://cdn.syncfusion.com/ej2/material.css');

.sidebar {
  box-shadow: rgb(113 122 131 / 11%) 0px 7px 30px 0px;
}
.nav-item,
.navbar {
  z-index: 10000;
}

/* Responsive Sidebar Fixes */
@media screen and (max-width: 640px) {
  .sidebar {
    z-index: 10000000;
    width: 224px; /* w-56 */
  }
}

@media screen and (min-width: 641px) and (max-width: 768px) {
  .sidebar {
    z-index: 10000000;
    width: 256px; /* w-64 */
  }
}

@media screen and (min-width: 769px) {
  .sidebar {
    z-index: 999;
  }
}

/* Main content responsive padding */
@media screen and (max-width: 640px) {
  .main-content {
    margin-left: 0;
    overflow-x: hidden;
  }
}

@media screen and (min-width: 641px) and (max-width: 1024px) {
  .main-content {
    overflow-x: hidden;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
}

/* Responsive dashboard cards */
@media screen and (max-width: 900px) {
  .card-wrapper {
    width: 100% !important;
    padding: 0.5rem !important;
  }
}

.e-dlg-center-center, .e-quick-popup-wrapper.e-device {
  z-index: 1000000 !important;
}

::-webkit-scrollbar {
  width: 6px;
}
::-webkit-scrollbar-thumb {
  background-color: rgb(216, 216, 216);
  border-radius: 40px;
}
::-webkit-scrollbar-track {
  background-color: transparent;
}

/* color-picker style  */
#preview {
  background: transparent
    url('https://ej2.syncfusion.com/react/demos/src/color-picker/images/pen.png')
    no-repeat;
  display: inline-block;
  height: 80px;
  margin: 10px 0;
  min-width: 300px;
  max-width: 600px;
  background-color: #008000;
}

.e-input-group:not(.e-float-icon-left), .e-input-group.e-success:not(.e-float-icon-left), .e-input-group.e-warning:not(.e-float-icon-left), .e-input-group.e-error:not(.e-float-icon-left), .e-input-group.e-control-wrapper:not(.e-float-icon-left), .e-input-group.e-control-wrapper.e-success:not(.e-float-icon-left), .e-input-group.e-control-wrapper.e-warning:not(.e-float-icon-left), .e-input-group.e-control-wrapper.e-error:not(.e-float-icon-left) {
  border: none;
}

